# LogicGrowsOnTrees-MPI

./: .gitignore  CHANGELOG.md  LogicGrowsOnTrees-MPI.cabal  LogicGrowsOnTrees-MPI.haddock  LogicGrowsOnTrees-Parallel-Adapter-MPI.html  Visitor-MPI.c  Visitor-MPI.cabal  Visitor-MPI.h  doc-index.html  index-frames.html  index.html  mini_LogicGrowsOnTrees-Parallel-Adapter-MPI.html
Control/Monad/Trans/Visitor/Parallel/: MPI.hs
Control/Visitor/Parallel/: MPI.hs
Control/Visitor/Parallel/BackEnd/: MPI.hs
c-sources/: LogicGrowsOnTrees-MPI.c  LogicGrowsOnTrees-MPI.h  Visitor-MPI.c  Visitor-MPI.h
examples/: count-all-trivial-tree-leaves.hs
sources/LogicGrowsOnTrees/Parallel/Adapter/: MPI.hs
sources/Visitor/Parallel/Adapter/: MPI.hs
sources/Visitor/Parallel/BackEnd/: MPI.hs
tests/: test-nqueens.hs  test-trivial.hs
