Name:                Visitor-MPI
Version:             1.0
License:             BSD3
License-file:        LICENSE
Author:              Gregory Crosswhite
Maintainer:          Gregory Crosswhite <gcrosswhite@gmail.com>
Stability:           Provisional
Synopsis:            
Description:         
Cabal-version:       >=1.6
Build-type:          Simple
Category:	     
Extra-source-files:  c-sources/Visitor-MPI.c c-sources/Visitor-MPI.h

Source-Repository head
  Type:                git
  Location:            git://github.com/gcross/Visitor-MPI.git

Source-Repository this
    Type:                git
    Location:            git://github.com/gcross/Visitor-MPI.git
--    Tag:                 

Library
    Build-depends:
        base > 4 && < 5,
        bytestring >= 0.9 && < 0.11,
        cereal == 0.3.*,
        cmdtheline == 0.2.*,
        composition == 1.*,
        containers >= 0.4 && < 0.6,
        data-ivar >= 0.30 && < 1.0,
        derive >= 2.5.9 && < 2.6,
        hslogger == 1.2.*,
        MonadCatchIO-transformers == 0.3.*,
        stm == 2.4.*,
        transformers >= 0.2 && < 0.4,
        Visitor == 1.0.*
    Extra-libraries: mpi
    C-sources: c-sources/Visitor-MPI.c
    Exposed-modules:
        Control.Visitor.Parallel.BackEnd.MPI

Flag tests
    Description: Enable building the n-queens executables.
    Default:     False

Executable test-trivial
    Main-is:    tests/test-trivial.hs
    Build-depends: base
    Extra-libraries: mpi
    C-sources: c-sources/Visitor-MPI.c
    if flag(tests)
        Buildable: True
    else
        Buildable: False

Executable test-nqueens
    Main-is:    tests/test-nqueens.hs
    Build-depends: base
    Extra-libraries: mpi
    C-sources: c-sources/Visitor-MPI.c
    if flag(tests)
        Buildable: True
    else
        Buildable: False
